--- a/code_day3.ipynb
+++ b/code_day3.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,321 +118,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[{'L'}],\n",
-       " [{'N'}],\n",
-       " [{'w'}],\n",
-       " [{'M'}],\n",
-       " [{'q'}],\n",
-       " [{'S'}],\n",
-       " [{'J'}],\n",
-       " [{'p'}],\n",
-       " [{'L'}],\n",
-       " [{'Q'}],\n",
-       " [{'T'}],\n",
-       " [{'V'}],\n",
-       " [{'Q'}],\n",
-       " [{'Z'}],\n",
-       " [{'z'}],\n",
-       " [{'p'}],\n",
-       " [{'D'}],\n",
-       " [{'t'}],\n",
-       " [{'m'}],\n",
-       " [{'l'}],\n",
-       " [{'c'}],\n",
-       " [{'N'}],\n",
-       " [{'q'}],\n",
-       " [{'t'}],\n",
-       " [{'T'}],\n",
-       " [{'C'}],\n",
-       " [{'D'}],\n",
-       " [{'B'}],\n",
-       " [{'l'}],\n",
-       " [{'p'}],\n",
-       " [{'b'}],\n",
-       " [{'C'}],\n",
-       " [{'q'}],\n",
-       " [{'s'}],\n",
-       " [{'w'}],\n",
-       " [{'P'}],\n",
-       " [{'m'}],\n",
-       " [{'B'}],\n",
-       " [{'l'}],\n",
-       " [{'j'}],\n",
-       " [{'q'}],\n",
-       " [{'r'}],\n",
-       " [{'V'}],\n",
-       " [{'B'}],\n",
-       " [{'P'}],\n",
-       " [{'W'}],\n",
-       " [{'l'}],\n",
-       " [{'M'}],\n",
-       " [{'R'}],\n",
-       " [{'j'}],\n",
-       " [{'J'}],\n",
-       " [{'d'}],\n",
-       " [{'L'}],\n",
-       " [{'N'}],\n",
-       " [{'V'}],\n",
-       " [{'g'}],\n",
-       " [{'J'}],\n",
-       " [{'Z'}],\n",
-       " [{'m'}],\n",
-       " [{'q'}],\n",
-       " [{'r'}],\n",
-       " [{'j'}],\n",
-       " [{'f'}],\n",
-       " [{'D'}],\n",
-       " [{'t'}],\n",
-       " [{'B'}],\n",
-       " [{'T'}],\n",
-       " [{'v'}],\n",
-       " [{'w'}],\n",
-       " [{'D'}],\n",
-       " [{'Q'}],\n",
-       " [{'l'}],\n",
-       " [{'m'}],\n",
-       " [{'h'}],\n",
-       " [{'n'}],\n",
-       " [{'m'}],\n",
-       " [{'r'}],\n",
-       " [{'j'}],\n",
-       " [{'B'}],\n",
-       " [{'b'}],\n",
-       " [{'j'}],\n",
-       " [{'q'}],\n",
-       " [{'b'}],\n",
-       " [{'w'}],\n",
-       " [{'t'}],\n",
-       " [{'J'}],\n",
-       " [{'d'}],\n",
-       " [{'M'}],\n",
-       " [{'h'}],\n",
-       " [{'V'}],\n",
-       " [{'m'}],\n",
-       " [{'S'}],\n",
-       " [{'B'}],\n",
-       " [{'N'}],\n",
-       " [{'D'}],\n",
-       " [{'Z'}],\n",
-       " [{'w'}],\n",
-       " [{'P'}],\n",
-       " [{'R'}],\n",
-       " [{'V'}],\n",
-       " [{'f'}],\n",
-       " [{'g'}],\n",
-       " [{'C'}],\n",
-       " [{'z'}],\n",
-       " [{'T'}],\n",
-       " [{'s'}],\n",
-       " [{'l'}],\n",
-       " [{'p'}],\n",
-       " [{'H'}],\n",
-       " [{'G'}],\n",
-       " [{'h'}],\n",
-       " [{'r'}],\n",
-       " [{'T'}],\n",
-       " [{'n'}],\n",
-       " [{'H'}],\n",
-       " [{'D'}],\n",
-       " [{'V'}],\n",
-       " [{'R'}],\n",
-       " [{'j'}],\n",
-       " [{'Z'}],\n",
-       " [{'t'}],\n",
-       " [{'H'}],\n",
-       " [{'f'}],\n",
-       " [{'t'}],\n",
-       " [{'T'}],\n",
-       " [{'F'}],\n",
-       " [{'N'}],\n",
-       " [{'P'}],\n",
-       " [{'L'}],\n",
-       " [{'C'}],\n",
-       " [{'N'}],\n",
-       " [{'D'}],\n",
-       " [{'D'}],\n",
-       " [{'Z'}],\n",
-       " [{'r'}],\n",
-       " [{'w'}],\n",
-       " [{'J'}],\n",
-       " [{'B'}],\n",
-       " [{'g'}],\n",
-       " [{'c'}],\n",
-       " [{'S'}],\n",
-       " [{'l'}],\n",
-       " [{'r'}],\n",
-       " [{'Z'}],\n",
-       " [{'j'}],\n",
-       " [{'B'}],\n",
-       " [{'h'}],\n",
-       " [{'j'}],\n",
-       " [{'T'}],\n",
-       " [{'n'}],\n",
-       " [{'s'}],\n",
-       " [{'R'}],\n",
-       " [{'Q'}],\n",
-       " [{'t'}],\n",
-       " [{'T'}],\n",
-       " [{'h'}],\n",
-       " [{'L'}],\n",
-       " [{'M'}],\n",
-       " [{'v'}],\n",
-       " [{'t'}],\n",
-       " [{'l'}],\n",
-       " [{'B'}],\n",
-       " [{'q'}],\n",
-       " [{'R'}],\n",
-       " [{'m'}],\n",
-       " [{'m'}],\n",
-       " [{'j'}],\n",
-       " [{'q'}],\n",
-       " [{'V'}],\n",
-       " [{'d'}],\n",
-       " [{'j'}],\n",
-       " [{'Q'}],\n",
-       " [{'D'}],\n",
-       " [{'f'}],\n",
-       " [{'G'}],\n",
-       " [{'b'}],\n",
-       " [{'D'}],\n",
-       " [{'M'}],\n",
-       " [{'G'}],\n",
-       " [{'T'}],\n",
-       " [{'M'}],\n",
-       " [{'S'}],\n",
-       " [{'f'}],\n",
-       " [{'J'}],\n",
-       " [{'n'}],\n",
-       " [{'D'}],\n",
-       " [{'C'}],\n",
-       " [{'H'}],\n",
-       " [{'W'}],\n",
-       " [{'r'}],\n",
-       " [{'L'}],\n",
-       " [{'V'}],\n",
-       " [{'M'}],\n",
-       " [{'W'}],\n",
-       " [{'Z'}],\n",
-       " [{'n'}],\n",
-       " [{'q'}],\n",
-       " [{'m'}],\n",
-       " [{'H'}],\n",
-       " [{'R'}],\n",
-       " [{'h'}],\n",
-       " [{'c'}],\n",
-       " [{'L'}],\n",
-       " [{'C'}],\n",
-       " [{'B'}],\n",
-       " [{'n'}],\n",
-       " [{'c'}],\n",
-       " [{'b'}],\n",
-       " [{'S'}],\n",
-       " [{'C'}],\n",
-       " [{'f'}],\n",
-       " [{'B'}],\n",
-       " [{'z'}],\n",
-       " [{'W'}],\n",
-       " [{'n'}],\n",
-       " [{'v'}],\n",
-       " [{'p'}],\n",
-       " [{'N'}],\n",
-       " [{'m'}],\n",
-       " [{'p'}],\n",
-       " [{'l'}],\n",
-       " [{'M'}],\n",
-       " [{'W'}],\n",
-       " [{'H'}],\n",
-       " [{'j'}],\n",
-       " [{'b'}],\n",
-       " [{'f'}],\n",
-       " [{'D'}],\n",
-       " [{'m'}],\n",
-       " [{'g'}],\n",
-       " [{'l'}],\n",
-       " [{'n'}],\n",
-       " [{'S'}],\n",
-       " [{'L'}],\n",
-       " [{'F'}],\n",
-       " [{'z'}],\n",
-       " [{'s'}],\n",
-       " [{'W'}],\n",
-       " [{'Q'}],\n",
-       " [{'l'}],\n",
-       " [{'H'}],\n",
-       " [{'L'}],\n",
-       " [{'W'}],\n",
-       " [{'B'}],\n",
-       " [{'W'}],\n",
-       " [{'F'}],\n",
-       " [{'l'}],\n",
-       " [{'j'}],\n",
-       " [{'w'}],\n",
-       " [{'j'}],\n",
-       " [{'T'}],\n",
-       " [{'b'}],\n",
-       " [{'L'}],\n",
-       " [{'J'}],\n",
-       " [{'Q'}],\n",
-       " [{'S'}],\n",
-       " [{'Q'}],\n",
-       " [{'m'}],\n",
-       " [{'R'}],\n",
-       " [{'T'}],\n",
-       " [{'F'}],\n",
-       " [{'r'}],\n",
-       " [{'v'}],\n",
-       " [{'n'}],\n",
-       " [{'m'}],\n",
-       " [{'l'}],\n",
-       " [{'n'}],\n",
-       " [{'T'}],\n",
-       " [{'L'}],\n",
-       " [{'B'}],\n",
-       " [{'C'}],\n",
-       " [{'d'}],\n",
-       " [{'M'}],\n",
-       " [{'T'}],\n",
-       " [{'f'}],\n",
-       " [{'P'}],\n",
-       " [{'R'}],\n",
-       " [{'N'}],\n",
-       " [{'B'}],\n",
-       " [{'t'}],\n",
-       " [{'N'}],\n",
-       " [{'C'}],\n",
-       " [{'P'}],\n",
-       " [{'t'}],\n",
-       " [{'J'}],\n",
-       " [{'T'}],\n",
-       " [{'W'}],\n",
-       " [{'v'}],\n",
-       " [{'m'}],\n",
-       " [{'c'}],\n",
-       " [{'T'}],\n",
-       " [{'s'}],\n",
-       " [{'J'}],\n",
-       " [{'B'}],\n",
-       " [{'D'}],\n",
-       " [{'H'}],\n",
-       " [{'J'}],\n",
-       " [{'J'}],\n",
-       " [{'t'}],\n",
-       " [{'l'}]]"
+       "8109"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n"
+    "\n",
+    "score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = int(len(input)/3)\n",
+    "score=0\n",
+    "for i in range(n):\n",
+    "    group = input[i*3:(i+1)*3]\n",
+    "    badge = set(group[0]).intersection(set(group[1])).intersection(set(group[2]))\n",
+    "    score+=mapping[list(badge)[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2738"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score"
    ]
   },
   {
